; ModuleID = '/home/carl/AnghaBench/linux/kernel/livepatch/extr_transition.c_klp_update_patch_state.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/livepatch/extr_transition.c_klp_update_patch_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }

@TIF_PATCH_PENDING = common dso_local global i32 0, align 4
@klp_target_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @klp_update_patch_state(%struct.task_struct* %0) #0 {
  %2 = alloca %struct.task_struct*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %2, align 8
  %3 = call i32 (...) @preempt_disable_notrace()
  %4 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %5 = load i32, i32* @TIF_PATCH_PENDING, align 4
  %6 = call i64 @test_and_clear_tsk_thread_flag(%struct.task_struct* %4, i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load i32, i32* @klp_target_state, align 4
  %10 = call i32 @READ_ONCE(i32 %9)
  %11 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %12 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  br label %13

13:                                               ; preds = %8, %1
  %14 = call i32 (...) @preempt_enable_notrace()
  ret void
}

declare dso_local i32 @preempt_disable_notrace(...) #1

declare dso_local i64 @test_and_clear_tsk_thread_flag(%struct.task_struct*, i32) #1

declare dso_local i32 @READ_ONCE(i32) #1

declare dso_local i32 @preempt_enable_notrace(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
